# compilef-ck

./: Cargo.toml  LICENSE  README.md  commit.json
.github/workflows/: ci.yml
brainfuck/: helloworld.bf  in_out.bf  increment_overflow.bf  read_mem.bf  underflow.bf
src/: compiler.rs  interpreter.rs  main.rs  parsing.rs  tests.rs
